--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,4 +2,7 @@ rootProject.name = 'RN_Task'
 include ':react-native-gesture-handler'
 project(':react-native-gesture-handler').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-gesture-handler/android')
 
+include ':react-native-geolocation-service'
+project(':react-native-geolocation-service').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-geolocation-service/android')
+
 include ':app'
